# user-hotdeal-bot

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  PATCHLOG.md  README.md  bot.py  config.example.yaml  config.json.example  docker-compose.yml  main.py  pyproject.toml  requirements.txt  util.py
.github/workflows/: docker-publish.yml
crawler/: __init__.py  arcalive.py  base_crawler.py  clien.py  coolenjoy.py  damoang.py  dummy.py  fmkorea.py  ppomppu.py  quasarzone.py  ruliweb.py
src/: bot.py  main.py  util.py
src/crawler/: __init__.py  arcalive.py  base_crawler.py  clien.py  coolenjoy.py  damoang.py  dummy.py  fmkorea.py  ppomppu.py  quasarzone.py  ruliweb.py  zod.py
src/tools/: crawler.py  migration.py  recovery.py  remove_message.py
tests/: test_article_collection.py  test_crawlers.py  test_main.py
tools/: crawler.py  migration.py  remove_message.py
