[project]
name = "user-hotdeal-bot"
version = "2.2.0"
description = "한국 커뮤니티 사이트 핫딜 게시판 크롤링 및 메신저 전송 봇"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.10.10",
    "beautifulsoup4>=4.12.3",
    "logfire[aiohttp]>=0.30.0",
    "python-telegram-bot>=21.6",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "coverage>=7.6.4",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.3",
    "typer>=0.12.5",
]

[tool.ruff]
include = [
    "pyproject.toml",
    "src/**/*.py",
    "tests/**/*.py",
]
line-length = 120

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "I",    # isort
]
ignore = [
    "E501",  # line too long
    # "F401",  # module imported but unused
    "F841",  # local variable is assigned to but never used
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.format]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
